# Advisor-api--DebtMind-Hackathon

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirement.txt
.claude/: settings.json
app/: config.py  main.py
app/routers/: advisor.py
app/services/: advisor_reply.py  model.py
app/services/HTML/: model_HTML.py  offer_card.py  offer_card_render.py
app/services/ai_agent/: CSL_path.py  GDR_path.py  PL_MOU_path.py  TDR_PL_path.py  config.py  main_agent.py  nonTDR_extension_path.py
app/services/functions/: AmortiseCal.py  util.py
tests/: test_advisor.py  test_results.xlsx  unit_test_services.ipynb
