[project]
name = "advisor-api"
version = "0.1.0"
description = "DebtMind Advisor API — FastAPI backend for n8n and LLM integration"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.54.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "pytest>=9.0.3",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
